Added freelancer validate otp,profile and change password
